--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p>You can install Java on your own laptop! <a href="develEnvSetup.html">See here for instructions</a>.</p>
 </li>
 <li>
-<p><a href="asst07.html">Assignment 7</a> has been posted: <strong>Due November 3rd</strong></p>
+<p><a href="asst08.html">Assignment 8</a> has been posted: <strong>Due November 10th</strong></p>
 </li>
 <li>
 <p>Current week notes: <a href="#week08">Week 08</a></p>
@@ -347,7 +347,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 4.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 8</a>: <strong>Due Nov 10</strong></p>
+<p><a href="asst08.html">Assignment 8</a>: <strong>Due Nov 10</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct31.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -843,7 +843,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-28 10:32:41 -0400
+Last updated 2022-11-04 17:33:36 -0400
 </div>
 </div>
 </body>
