--- a/schedule.html
+++ b/schedule.html
@@ -721,7 +721,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 4.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 8</a>: <strong>Due Nov 10</strong></p>
+<p><a href="asst08.html">Assignment 8</a>: <strong>Due Nov 10</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-oct31.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -876,7 +876,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-03 12:12:26 -0400
+Last updated 2022-11-04 17:33:31 -0400
 </div>
 </div>
 </body>
