--- a/notes-alinen/notes-nov07.html
+++ b/notes-alinen/notes-nov07.html
@@ -22,13 +22,15 @@
 <div class="sect1">
 <h2 id="_notes_week_of_nov07">Notes: Week of nov07</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e70de830-50f9-4764-9890-af460176f1d7">Lecture - Monday - 11/7/2022</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:13:32 -0400
+Last updated 2022-11-07 17:48:55 -0500
 </div>
 </div>
 </body>
