Poliak slides lec 16: sorting

--- a/index.html
+++ b/index.html
@@ -385,6 +385,9 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-nov07.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture16_11_08.pdf">Lecture 16 (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code jam 04, <a href="jam4Guide.html">Jam 4 Study Guide</a></p>
 </li>
 </ul>
@@ -843,7 +846,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-06 09:18:51 -0500
+Last updated 2022-11-04 17:33:36 -0400
 </div>
 </div>
 </body>
