--- a/notes-alinen/notes-nov07.html
+++ b/notes-alinen/notes-nov07.html
@@ -25,12 +25,15 @@
 <div class="paragraph">
 <p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e70de830-50f9-4764-9890-af460176f1d7">Lecture - Monday - 11/7/2022</a></p>
 </div>
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=af695191-6f1f-470c-a14f-af4900e2fc27">Lecture - Wednesday - 11/9/2022</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-07 17:48:55 -0500
+Last updated 2022-11-10 08:50:51 -0500
 </div>
 </div>
 </body>
