lecture 17: poliak slides

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p><a href="asst08.html">Assignment 8</a> has been posted: <strong>Due November 10th</strong></p>
 </li>
 <li>
-<p>Current week notes: <a href="#week08">Week 08</a></p>
+<p>Current week notes: <a href="#week10">Week 10</a></p>
 </li>
 <li>
 <p>The final exam with be <a href="https://www.brynmawr.edu/inside/academic-information/registrar/undergraduates/classes-exams/about-final-exams">self-scheduled</a> during finals week (December 11th - December 16th). <a href="https://www.brynmawr.edu/sites/default/files/media/documents/2022-10/SS%20Exam%20Schedule.pdf">Click here for the self-scheduled exam times.</a></p>
@@ -385,7 +385,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-nov07.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture16_11_08.pdf">Lecture 16 (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture16_11_08.pdf">Lecture 16 (Poliak)</a> <a href="slides-azpoliak/lecture17_11_10.pdf">Lecture 17 (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code jam 04, <a href="jam4Guide.html">Jam 4 Study Guide</a></p>
@@ -846,7 +846,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-04 17:33:36 -0400
+Last updated 2022-11-10 12:40:01 -0500
 </div>
 </div>
 </body>
