--- a/schedule.html
+++ b/schedule.html
@@ -759,7 +759,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-nov07.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture16_11_08.pdf">Lecture 16 (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture16_11_08.pdf">Lecture 16 (Poliak)</a> <a href="slides-azpoliak/lecture17_11_10.pdf">Lecture 17 (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code jam 04, <a href="jam4Guide.html">Jam 4 Study Guide</a></p>
@@ -879,7 +879,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-08 12:51:03 -0500
+Last updated 2022-11-10 12:41:24 -0500
 </div>
 </div>
 </body>
