--- a/asst09.html
+++ b/asst09.html
@@ -44,7 +44,7 @@
 <h2 id="_cs113_lab_9_sorting">CS113 Lab 9: Sorting</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><strong>Due Thursday, November 17, before midnight</strong></p>
+<p><strong>Due <span class="line-through">Thursday, November 17</span> Wednesday November 23rd, before midnight</strong></p>
 </div>
 <div class="paragraph">
 <p><strong>Goals</strong></p>
@@ -568,7 +568,7 @@ else
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>The programs, <code>Restaurant.java</code>, RestaurantUtil.java`, and <code>RestaurantApp.java</code></p>
+<p>The programs, <code>Restaurant.java</code>, <code>RestaurantUtil.java</code>, and <code>RestaurantApp.java</code></p>
 </li>
 <li>
 <p>Make sure your programs have a header containing your name, date, and description.</p>
@@ -600,7 +600,7 @@ spent on the assignment and any interesting customizations you made.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-10-11 10:42:13 -0400
+Last updated 2022-11-11 12:56:28 -0500
 </div>
 </div>
 </body>
