--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p>You can install Java on your own laptop! <a href="develEnvSetup.html">See here for instructions</a>.</p>
 </li>
 <li>
-<p><a href="asst08.html">Assignment 8</a> has been posted: <strong>Due November 10th</strong></p>
+<p><a href="asst09.html">Assignment 9</a> has been posted: <strong>Due November 23rd</strong></p>
 </li>
 <li>
 <p>Current week notes: <a href="#week10">Week 10</a></p>
@@ -376,7 +376,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 4.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 9</a>: <strong>Due Nov 17</strong></p>
+<p><a href="asst09.html">Assignment 9</a>: <strong>Due Nov 23</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-nov07.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -846,7 +846,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-10 12:40:01 -0500
+Last updated 2022-11-11 12:56:54 -0500
 </div>
 </div>
 </body>
