--- a/schedule.html
+++ b/schedule.html
@@ -750,7 +750,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 4.2</p>
 </li>
 <li>
-<p><a href=".html">Assignment 9</a>: <strong>Due Nov 17</strong></p>
+<p><a href="asst09.html">Assignment 9</a>: <strong>Due Nov 23</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-nov07.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -879,7 +879,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-10 12:41:24 -0500
+Last updated 2022-11-11 12:57:09 -0500
 </div>
 </div>
 </body>
