fix function name in A09 writeup; update syllabus

--- a/asst09.html
+++ b/asst09.html
@@ -517,7 +517,7 @@ keyword.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>You are given a function <code>filterByKeyword</code> that returns an array of restaurants which match the keyword. Study this function to see examples of</p>
+<p>You are given a function <code>searchCategoryByKeyword</code> that returns an array of restaurants which match the keyword. Study this function to see examples of</p>
 <div class="ulist">
 <ul>
 <li>
@@ -600,7 +600,7 @@ spent on the assignment and any interesting customizations you made.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-11 12:56:28 -0500
+Last updated 2022-11-14 09:21:35 -0500
 </div>
 </div>
 </body>
