--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 7th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Search and sort, Runtime analysis</strong> <a id="week10"></a></p>
+<p><strong>Search and sort</strong> <a id="week10"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -397,7 +397,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 14th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Recursion</strong> <a id="week11"></a></p>
+<p><strong>Runtime analysis, Recursion</strong> <a id="week11"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -426,7 +426,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 21st</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Data structures: List, Hashmap and Dictionary</strong> <a id="week12"></a></p>
+<p><strong>Recursion, Data structures: ArrayList, Hashmap and Dictionary</strong> <a id="week12"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -452,7 +452,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 28th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Data structures: List, Hashmap and Dictionary</strong> <a id="week13"></a></p>
+<p><strong>Data structures: ArrayList, Hashmap and Dictionary</strong> <a id="week13"></a></p>
 </div>
 <div class="ulist">
 <ul>
@@ -846,7 +846,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-11 12:56:54 -0500
+Last updated 2022-11-14 09:21:14 -0500
 </div>
 </div>
 </body>
