ass09: small typo from python to java

--- a/asst09.html
+++ b/asst09.html
@@ -444,7 +444,7 @@ while !timeToQuit
 Your output does not need to be identical, but it should be clean and easy to read.</p>
 </li>
 <li>
-<p>You are not allowed to use any of Python’s built-in search functions.</p>
+<p>You are not allowed to use any of Java’s built-in search functions.</p>
 </li>
 </ul>
 </div>
@@ -600,7 +600,7 @@ spent on the assignment and any interesting customizations you made.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-14 09:21:35 -0500
+Last updated 2022-11-14 12:20:45 -0500
 </div>
 </div>
 </body>
