update lecture notes

--- a/notes-alinen/notes-nov14.html
+++ b/notes-alinen/notes-nov14.html
@@ -22,13 +22,15 @@
 <div class="sect1">
 <h2 id="_notes_week_of_nov14">Notes: Week of nov14</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=06f08f92-aab1-454c-b3ab-af4d015e2582">Video - Monday</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:13:32 -0400
+Last updated 2022-11-14 16:23:40 -0500
 </div>
 </div>
 </body>
