slides lectuer 18 poliak

--- a/schedule.html
+++ b/schedule.html
@@ -791,6 +791,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-nov14.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture18_11_15.pdf">Lecture 18 (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 05 Practice</p>
 </li>
 </ul>
@@ -879,7 +882,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-14 09:23:04 -0500
+Last updated 2022-11-15 12:44:52 -0500
 </div>
 </div>
 </body>
