--- a/index.html
+++ b/index.html
@@ -417,6 +417,9 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-nov14.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture18_11_15.pdf">Lecture 18 (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 05 Practice</p>
 </li>
 </ul>
@@ -846,7 +849,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-14 09:21:14 -0500
+Last updated 2022-11-11 12:56:54 -0500
 </div>
 </div>
 </body>
