--- a/notes-alinen/notes-nov14.html
+++ b/notes-alinen/notes-nov14.html
@@ -25,12 +25,15 @@
 <div class="paragraph">
 <p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=06f08f92-aab1-454c-b3ab-af4d015e2582">Video - Monday</a></p>
 </div>
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=9b3297ad-842d-423f-987f-af4f0165cebe">Video - Wednesday</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-14 16:23:40 -0500
+Last updated 2022-11-18 09:45:08 -0500
 </div>
 </div>
 </body>
