schedule: lecture 20 poliak slides

--- a/schedule.html
+++ b/schedule.html
@@ -820,6 +820,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-nov21.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture20_11_22.pdf">Lecture 20 (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 05, <a href="jam5Guide.html">Code jam 05</a></p>
 </li>
 </ul>
@@ -882,7 +885,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-18 09:44:28 -0500
+Last updated 2022-11-22 12:43:31 -0500
 </div>
 </div>
 </body>
