--- a/index.html
+++ b/index.html
@@ -446,6 +446,9 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-nov21.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture20_11_22.pdf">Lecture 20 (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 05, <a href="jam5Guide.html">Code jam 05</a></p>
 </li>
 </ul>
@@ -849,7 +852,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-14 09:21:14 -0500
+Last updated 2022-11-11 12:56:54 -0500
 </div>
 </div>
 </body>
