--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
 <p><a href="asst09.html">Assignment 9</a> has been posted: <strong>Due November 23rd</strong></p>
 </li>
 <li>
-<p>Current week notes: <a href="#week10">Week 10</a></p>
+<p><a href="asst10.html">Assignment 10</a> has been posted: <strong>Due December 1st</strong></p>
+</li>
+<li>
+<p>Current week notes: <a href="#week13">Week 13</a></p>
 </li>
 <li>
 <p>The final exam with be <a href="https://www.brynmawr.edu/inside/academic-information/registrar/undergraduates/classes-exams/about-final-exams">self-scheduled</a> during finals week (December 11th - December 16th). <a href="https://www.brynmawr.edu/sites/default/files/media/documents/2022-10/SS%20Exam%20Schedule.pdf">Click here for the self-scheduled exam times.</a></p>
@@ -405,9 +408,6 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 2.3</p>
 </li>
 <li>
-<p><a href=".html">Assignment 10</a>: <strong>Due Dec 1st</strong></p>
-</li>
-<li>
 <p><a href="jam4Guide.html">Jam 4 Guide</a></p>
 </li>
 <li>
@@ -440,13 +440,13 @@ on lecture content, worksheets, and assignments.</p>
 <p><strong>NO CLASS THURSDAY, NOV 24th</strong></p>
 </li>
 <li>
+<p><a href="asst10.html">Assignment 10</a>: <strong>Due Dec 1st</strong></p>
+</li>
+<li>
 <p><a href="notes-alinen/notes-nov21.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-nov21.html">Lecture Notes and Resources (Poliak)</a></p>
-</li>
-<li>
-<p>Lab activity: Code Jam 05, <a href="jam5Guide.html">Code jam 05</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -463,7 +463,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 4.4</p>
 </li>
 <li>
-<p><a href=".html">Assignment 11</a>: <strong>Due Dec 8</strong></p>
+<p><a href=".html">Assignment 10</a>: <strong>Due Dec 8</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-nov28.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -472,7 +472,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-nov28.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: Code Jam 06 Practice</p>
+<p>Lab activity: Code Jam 05, <a href="jam5Guide.html">Code jam 05</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -495,7 +495,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-dec05.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: Code Jam 06, <a href="jam6Guide.html">Code jam 06 study guide</a></p>
+<p>Lab activity: final practice <a href="jam6Guide.html">Code jam 06 study guide</a></p>
 </li>
 <li>
 <p>Final exam study guide, <a href="">Final exam study guide</a></p>
@@ -849,7 +849,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-14 09:21:14 -0500
+Last updated 2022-11-23 17:27:26 -0500
 </div>
 </div>
 </body>
