--- a/notes-alinen/notes-nov21.html
+++ b/notes-alinen/notes-nov21.html
@@ -22,13 +22,18 @@
 <div class="sect1">
 <h2 id="_notes_week_of_nov21">Notes: Week of nov21</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=f44988f8-26ea-44c2-969c-af5500d25d00">Video - Monday</a></p>
+</div>
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6a646530-6dd4-4536-ad35-af560167a92d">Video - Wednesday</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:13:32 -0400
+Last updated 2022-11-23 17:07:13 -0500
 </div>
 </div>
 </body>
