--- a/schedule.html
+++ b/schedule.html
@@ -779,9 +779,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 2.3</p>
 </li>
 <li>
-<p><a href=".html">Assignment 10</a>: <strong>Due Dec 1st</strong></p>
-</li>
-<li>
 <p><a href="jam4Guide.html">Jam 4 Guide</a></p>
 </li>
 <li>
@@ -814,13 +811,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><strong>NO CLASS THURSDAY, NOV 24th</strong></p>
 </li>
 <li>
+<p><a href="asst10.html">Assignment 10</a>: <strong>Due Dec 1st</strong></p>
+</li>
+<li>
 <p><a href="notes-alinen/notes-nov21.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-nov21.html">Lecture Notes and Resources (Poliak)</a></p>
-</li>
-<li>
-<p>Lab activity: Code Jam 05, <a href="jam5Guide.html">Code jam 05</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -837,7 +834,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: Sedgewick and Wayne, Sec 4.4</p>
 </li>
 <li>
-<p><a href=".html">Assignment 11</a>: <strong>Due Dec 8</strong></p>
+<p><a href=".html">Assignment 10</a>: <strong>Due Dec 8</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-nov28.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -846,7 +843,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-nov28.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: Code Jam 06 Practice</p>
+<p>Lab activity: Code Jam 05, <a href="jam5Guide.html">Code jam 05</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -869,7 +866,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-dec05.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p>Lab activity: Code Jam 06, <a href="jam6Guide.html">Code jam 06 study guide</a></p>
+<p>Lab activity: final practice <a href="jam6Guide.html">Code jam 06 study guide</a></p>
 </li>
 <li>
 <p>Final exam study guide, <a href="">Final exam study guide</a></p>
@@ -882,7 +879,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-18 09:44:28 -0500
+Last updated 2022-11-23 17:29:36 -0500
 </div>
 </div>
 </body>
