--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
 <p>You can install Java on your own laptop! <a href="develEnvSetup.html">See here for instructions</a>.</p>
 </li>
 <li>
-<p><a href="asst09.html">Assignment 9</a> has been posted: <strong>Due November 23rd</strong></p>
-</li>
-<li>
 <p><a href="asst10.html">Assignment 10</a> has been posted: <strong>Due December 1st</strong></p>
 </li>
 <li>
@@ -400,13 +397,10 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 14th</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Runtime analysis, Recursion</strong> <a id="week11"></a></p>
+<p><strong>Runtime analysis</strong> <a id="week11"></a></p>
 </div>
 <div class="ulist">
 <ul>
-<li>
-<p>Read: Sedgewick and Wayne, Sec 2.3</p>
-</li>
 <li>
 <p><a href="jam4Guide.html">Jam 4 Guide</a></p>
 </li>
@@ -429,12 +423,12 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Week of Nov 21st</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Recursion, Data structures: ArrayList, Hashmap and Dictionary</strong> <a id="week12"></a></p>
+<p><strong>Recursion</strong> <a id="week12"></a></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: Sedgewick and Wayne, Sec 4.4</p>
+<p>Read: Sedgewick and Wayne, Sec 2.3</p>
 </li>
 <li>
 <p><strong>NO CLASS THURSDAY, NOV 24th</strong></p>
@@ -463,7 +457,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: Sedgewick and Wayne, Sec 4.4</p>
 </li>
 <li>
-<p><a href=".html">Assignment 10</a>: <strong>Due Dec 8</strong></p>
+<p><a href="asst11.html">Assignment 11</a>: <strong>Extra credit, Due Dec 8</strong></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-nov28.html">Lecture Notes and Resources (Normoyle)</a></p>
@@ -486,19 +480,13 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="jam5Guide.html">Final exam guide</a></p>
+<p>Lab activity: <a href="finalGuide.html">Final exam Study guide</a></p>
 </li>
 <li>
 <p><a href="notes-alinen/notes-dec05.html">Lecture Notes and Resources (Normoyle)</a></p>
 </li>
 <li>
 <p><a href="notes-azpoliak/notes-dec05.html">Lecture Notes and Resources (Poliak)</a></p>
-</li>
-<li>
-<p>Lab activity: final practice <a href="jam6Guide.html">Code jam 06 study guide</a></p>
-</li>
-<li>
-<p>Final exam study guide, <a href="">Final exam study guide</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -849,7 +837,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-23 17:27:26 -0500
+Last updated 2022-11-27 15:58:53 -0500
 </div>
 </div>
 </body>
