--- a/asst10.html
+++ b/asst10.html
@@ -310,7 +310,7 @@ SUCCESS: rreverse [] = []</code></pre>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Copy your files to your dropbox, into the folder called <code>A09</code>.</p>
+<p>Copy your files to your dropbox, into the folder called <code>{ASST}</code>.</p>
 </li>
 </ol>
 </div>
@@ -320,7 +320,7 @@ SUCCESS: rreverse [] = []</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-23 17:25:35 -0500
+Last updated 2022-11-28 08:32:48 -0500
 </div>
 </div>
 </body>
