--- a/notes-alinen/notes-nov28.html
+++ b/notes-alinen/notes-nov28.html
@@ -22,13 +22,15 @@
 <div class="sect1">
 <h2 id="_notes_week_of_nov28">Notes: Week of nov28</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=4d2c9b66-0214-43eb-923f-af5b0163ea4e">Video - Monday</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-08-27 11:13:32 -0400
+Last updated 2022-11-29 08:15:40 -0500
 </div>
 </div>
 </body>
