lecture 21 poliak slides

--- a/index.html
+++ b/index.html
@@ -466,6 +466,9 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-nov28.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
+<p><a href="slides-azpoliak/lecture21_11_29.pdf">Lecture 21 (Poliak)</a></p>
+</li>
+<li>
 <p>Lab activity: Code Jam 05, <a href="jam5Guide.html">Code jam 05</a></p>
 </li>
 </ul>
@@ -837,7 +840,7 @@ transferred to the final.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-27 15:58:53 -0500
+Last updated 2022-11-28 12:53:31 -0500
 </div>
 </div>
 </body>
