--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="notes-azpoliak/notes-nov28.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture21_11_29.pdf">Lecture 21 (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture21_11_29.pdf">Lecture 21 (Poliak)</a> <a href="slides-azpoliak/lecture22_12_01.pdf">Lecture 22 (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code Jam 05, <a href="jam5Guide.html">Code jam 05</a></p>
