--- a/schedule.html
+++ b/schedule.html
@@ -840,7 +840,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="notes-azpoliak/notes-nov28.html">Lecture Notes and Resources (Poliak)</a></p>
 </li>
 <li>
-<p><a href="slides-azpoliak/lecture21_11_29.pdf">Lecture 21 (Poliak)</a></p>
+<p><a href="slides-azpoliak/lecture21_11_29.pdf">Lecture 21 (Poliak)</a> <a href="slides-azpoliak/lecture22_12_01.pdf">Lecture 22 (Poliak)</a></p>
 </li>
 <li>
 <p>Lab activity: Code Jam 05, <a href="jam5Guide.html">Code jam 05</a></p>
@@ -873,7 +873,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-29 12:47:07 -0500
+Last updated 2022-12-01 12:50:57 -0500
 </div>
 </div>
 </body>
