tweak confusing wording

--- a/notes-alinen/notes-nov28.html
+++ b/notes-alinen/notes-nov28.html
@@ -25,12 +25,15 @@
 <div class="paragraph">
 <p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=4d2c9b66-0214-43eb-923f-af5b0163ea4e">Video - Monday</a></p>
 </div>
+<div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=942932da-35c1-4dd5-9a52-af5d0143c7b7">Video - Wednesday</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-29 08:15:40 -0500
+Last updated 2022-11-30 14:50:43 -0500
 </div>
 </div>
 </body>
