--- a/asst11.html
+++ b/asst11.html
@@ -261,7 +261,7 @@ information if the user inputs the wrong number of command line arguments.</p>
 </div>
 <h3 id="_more_examples" class="discrete">More examples</h3>
 <div class="paragraph">
-<p>Below is sample output for the text, "tolstoy.txt", from your program <code>Frequency.java</code></p>
+<p>Below is sample output using your program <code>WordCount.java</code>, `for the text, "tolstoy.txt".</p>
 </div>
 <div class="ulist">
 <ul>
@@ -272,6 +272,18 @@ information if the user inputs the wrong number of command line arguments.</p>
 <p><a href="logs/a11-withignore.txt">Word counts (ignoring common words) for tolstoy.txt</a></p>
 </li>
 </ul>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+"tolstoy.txt" is the same input you used in <a href="asst04.html">Assignment 04</a> with <code>Frequency.java</code>
+</td>
+</tr>
+</table>
 </div>
 </div>
 </div>
@@ -309,7 +321,7 @@ information if the user inputs the wrong number of command line arguments.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-11-28 08:54:05 -0500
+Last updated 2022-12-01 15:43:32 -0500
 </div>
 </div>
 </body>
