--- a/asst11.html
+++ b/asst11.html
@@ -280,7 +280,7 @@ information if the user inputs the wrong number of command line arguments.</p>
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-"tolstoy.txt" is the same input you used in <a href="asst04.html">Assignment 04</a> with <code>Frequency.java</code>
+"tolstoy.txt" is the same input you used in <a href="asst04.html#_letter_frequency">Assignment 04: Letter Frequency</a>
 </td>
 </tr>
 </table>
@@ -321,7 +321,7 @@ information if the user inputs the wrong number of command line arguments.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-12-01 15:43:32 -0500
+Last updated 2022-12-01 15:47:21 -0500
 </div>
 </div>
 </body>
